# active-microemulsion

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cmake-with-clang.sh  cmake-with-gcc.sh  cmake-with-icc.sh  experiments.sh  omegaExperiments.sh  sequenceFigureBuilder.sh  sge-job.sh  slurm-job.sh  test.chains
ChainConfigs/: halfActive_100x100.chains  halfActive_200x200.chains  halfActive_50x50.chains  testConfig.chains  testConfig2.chains  testSmallChromosomes.chains
documentation/: README.md  mac_compile.rtf  tutorial.md
documentation/analysis/: contrastAnalysis.md
documentation/configure/: configure.md
documentation/run/: run.md
documentation/schedule/: schedule.md
include/: README.md
lib/: README.md
src/: CMakeLists.txt  CellData.h  ChainConfig.cpp  ChainConfig.h  CutoffEventSchedule.cpp  CutoffEventSchedule.h  EventSchedule.cpp  EventSchedule.h  Grid.cpp  Grid.h  Logger.cpp  Logger.h  Microemulsion.cpp  Microemulsion.h  PgmWriter.cpp  PgmWriter.h  Timing.cpp  Timing.h  main.cpp
src/Cell/: CellData.cpp  CellData.h
src/Chain/: ChainConfig.cpp  ChainConfig.h
src/EventSchedule/: EventSchedule.cpp  EventSchedule.h
src/Grid/: Grid.cpp  Grid.h  GridInitializer.cpp  GridInitializer.h
src/Logger/: Logger.cpp  Logger.h
src/Microemulsion/: Microemulsion.cpp  Microemulsion.h
src/Timing/: Timing.cpp
src/Utils/: BitwiseOperations.cpp  BitwiseOperations.h  RandomGenerator.cpp  RandomGenerator.h  Utils.cpp  Utils.h
src/Visualization/: PgmWriter.cpp  PgmWriter.h
test/: CMakeLists.txt  boost_compile_test.cpp  test_main.cpp
test/Grid/: RandomGenerator.test.cpp
utils/: blurAndView.py  chainConfigurator.py  contrastAnalysis.py  covRnaAnalysis.py  covRnaTxn3dAnalysis.py  covRnaTxnTimeAnalysis.py  covTimeAnalysis.py  covTxnAnalysis.py  extractCovRnaScatterplots.sh  extractRnaTxnScatterplots.sh  extractSimulation3DData.sh  runScatterplotTest.sh  scatterPlotAnalysis.sh  sequenceFigureBuilder.sh  simulate_LongTermBehavior.sh  simulate_SwitchingOff.sh  simulate_singleFocus.sh  simulate_wParam.sh  trxRnaAnalysis.py  txnRnaAnalysis.py  utilsLib.py
utils/BwUniClusterScripts/: README.md  initializeEnvironment.sh  moab-job.sh  parbatch-wrapper.sh  runSimulationSet.py  runSimulationSet.sh  schedulingLib.py
